--- a/paginas.html/index.html
+++ b/paginas.html/index.html
@@ -10,11 +10,11 @@
 
 <body>
 <div id="logo"><cool<p>logo</p></div>
-<div id="header"><h1>Appeltaart inc</h1></div>
-<nav><p>menubalk</p></nav>
-<article><p>een hoop tekst</p></article>
+<div id="menubalk"><h1>Appeltaart inc</h1></div>
+<div id="tekst"> <p>een hoop tekst</p> </div>
 <div id="foto">een mooie afbeelding</div>
-<footer><p>contact</p></footer>
+<div id="teksten">meer tekst</div>
+<div id="contact"> <p>contacten</p></div>
 <h1>geel</h1>
 </body>
 
