--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Mijn Website</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <title>Appeltaart Inc</title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
-  hallo hallo
+<div id="logo"><cool<p>logo</p></div>
+<div id="menubalk"><h1>Appeltaart inc</h1></div>
+<div id="tekst"> <p>een hoop tekst</p> </div>
+<div id="foto">een mooie afbeelding</div>
+<div id="teksten">meer tekst</div>
+<div id="contact"> <p>contacten</p></div>
+<h1>geel</h1>
 </body>
 
 </html>
