--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <div id="logo"><cool<p>logo</p></div>
 <div id="menubalk"><h1>Appeltaart inc</h1></div>
 <div id="tekst"> <p>een hoop tekst</p> </div>
-<div id="foto">een mooie afbeelding</div>
-<div id="teksten">meer tekst</div>
+<div id="foto"><p>fooootoooooo</p></div>
+<div id="teksten"><p>meer tekst</p></div>
 <div id="contact"> <p>contacten</p></div>
 </body>
 
