--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
 </head>
 
 <body>
-  <div id="logo"><cool<p>logo</p></div>
-  <div id="menubalk"><h1>Appeltaart inc</h1></div>
-  <div id="tekst"> <p>een hoop tekst</p> </div>
-  <div id="foto"><p>fooootoooooo</p></div>
-  <div id="teksten"><p>meer tekst</p></div>
-  <div id="contact"> <p>contacten</p></div>
-  <div id="logo"><cool<p>logo</p></div>
-  </body>
+<div id="logo"><cool<p>logo</p></div>
+<div id="menubalk">
+<a href="Recepten.html">recepten</a> 
+<a href="alergieën.html">alergieën</a>
+<a href="Tips en tricks.html">tips en tricks</a>
+<a href="Cybersecurity.html">Cybersecurity</a> </div>
+<div id="tekst"> <p>een hoop tekst</p> </div>
+<div id="foto"><p>fooootoooooo</p></div>
+<div id="teksten"><p>meer tekst</p></div>
+<div id="contact"> <p>contacten</p></div>
+</body>
 
 </html>
