--- a/paginas.html/Recepten.html
+++ b/paginas.html/Recepten.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Appeltaart Inc</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+
 <body>
+<p>recepten</p>
 <div id="logo"><cool<p>logo</p></div>
 <div id="menubalk"><h1>Appeltaart inc</h1></div>
 <div id="grootfoto"><p>fotoo</p></div>
