--- a/paginas.html/titelpagina.html
+++ b/paginas.html/titelpagina.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <body>
-    <div id="logo"><cool<p>logo</p></div>
-    <div id="menubalk">
-    <a href="Recepten.html">recepten</a> 
-    <a href="alergieën.html">alergieën</a>
-    <a href="Tips en tricks.html">tips en tricks</a>
-    <a href="Cybersecurity.html">Cybersecurity</a> </div>
-    <div id="tekst"> <p>een hoop tekst</p> </div>
-    <div id="foto"><p>fooootoooooo</p></div>
-    <div id="teksten"><p>meer tekst</p></div>
-    <div id="contact"> <p>contacten</p></div>
+<div id="logo"><cool<p>logo</p></div>
+<div id="recepten"><a href="Recepten.html">recepten</a></div>
+<div id="allergieën"><a href="allergieën.html">alergieën</a></div> 
+<div id="tipsentricks"><a href="Tips en tricks.html">tips en tricks</a></div> 
+<div id="Cybersecurity"><a href="Cybersecurity.html">Cybersecurity</a> </div></div>
+<div id="tekst"> <p>een hoop tekst</p> </div>
+<div id="foto"><p>fooootoooooo</p></div>
+<div id="teksten"><p>meer tekst</p></div>
+<div id="contact"> <p>contacten</p></div>
 </body>
 </html>
