--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
-<body>
-  <div id="logo"><cool<p>logo</p></div>
-  <div id="menubalk">
-  <a href="Recepten.html">recepten</a> 
-  <a href="alergieën.html">alergieën</a>
-  <a href="Tips en tricks.html">tips en tricks</a>
-  <a href="Cybersecurity.html">Cybersecurity</a> </div>
+<body> 
+  <div id="logo"><p>logo</p></div>
+  <div id="menubalk"><p>
+  <a href="/paginas/Recepten.html">Recepten</a>
+  <a href="/paginas/allergieën.html">Allergieën</a>
+  <a href="/paginas/Tips en tricks.html">Tips en tricks</a>
+  <a href="/paginas/Cybersecurity.Html">Cybersecurity</a> </p></div>
+
   <div id="tekst"> <p>een hoop tekst</p> </div>
   <div id="foto"><p>fooootoooooo</p></div>
   <div id="teksten"><p>meer tekst</p></div>
