--- a/paginas/titelpagina.html
+++ b/paginas/titelpagina.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <body>
-<div id="logo"><cool<p>logo</p></div>
+<div id="logo"><p>logo</p></div>
 <div id="recepten"><a href="Recepten.html">recepten</a></div>
 <div id="allergieën"><a href="allergieën.html">alergieën</a></div> 
 <div id="tipsentricks"><a href="Tips en tricks.html">tips en tricks</a></div> 
