--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
   <a href="/paginas/Tips en tricks.html">Tips en tricks</a>
   <a href="/paginas/Cybersecurity.Html">Cybersecurity</a> </p></div>
 
-  <div id="tekst"> <p>een hoop tekst</p> </div>
-  <div id="foto"><p>fooootoooooo</p></div>
-  <div id="teksten"><p>meer tekst</p></div>
+  <div id="tekst"> <h1>Appeltaart Inc</h1><p>een hoop tekst</p> </div>
+  <div id="foto"><img src="https://www.koopmans.com/Recepten/B/Bakken.nl_Q2_Koopmans_Klein_Appeltaartje_KL.jpg"
+    alt="Appeltaart" title="Appeltaart" width="100%" ></div> </div>
+  <div id="tekstonderT"><p>meer tekst</p></div>
   <div id="contact"> <p>contacten</p></div>
 </body>
 
