--- a/paginas/Tips en tricks.html
+++ b/paginas/Tips en tricks.html
@@ -6,15 +6,49 @@
     <link rel="stylesheet" type="text/css" href="/style.css" />
   </head>
 <body>
-<p>tips en tricks</p>
 <div id="logo"><p>logo</p></div>
-<div id="menubalk"><h1></h1>
+<div id="menubalk">
   <a href="/paginas/Recepten.html">Recepten</a>
   <a href="/paginas/allergieën.html">Allergieën</a>
   <a href="/paginas/Tips en tricks.html">Tips en tricks</a>
   <a href="/paginas/Cybersecurity.Html">Cybersecurity</a></div>
-<div id="grootfoto"><p>fotoo</p></div>
-<div id="teksten"><p>meer tekst</p></div>
+  <div id="tekst"><h2>Tips en Tricks</h2><p>8 Tips/Tricks voor Perfecte Appeltaart:<br><br>
+
+    1. Kies de Juiste Appels:<br>
+    Selecteer stevige, zoetzure appels zoals Granny Smith of Jonagold voor een goede balans tussen zoet en 
+    zuur. Dit zorgt voor een smaakvolle vulling.<br><br>
+ 
+ 2. Rol het Deeg Gelijkmatig Uit:<br>
+    Zorg ervoor dat je het deeg gelijkmatig uitrolt om een consistente textuur te garanderen. Een te dikke 
+    of dunne korst kan de balans verstoren.<br><br>
+ 
+ 3. Gebruik Citroensap voor Apple Behoud:<br>
+    Besprenkel de appels met citroensap om verkleuring te voorkomen en een frisse smaak toe te voegen. Dit 
+    voegt een extra dimensie toe aan de vulling.<br><br>
+ 
+ 4. Experimenteer met Kruiden<br>
+    Probeer verschillende kruiden zoals kaneel, nootmuskaat of zelfs een snufje gember om de smaken te 
+    versterken en je appeltaart uniek te maken.<br><br>
+ 
+ 5. Voeg Noten of Rozijnen Toe:v<br>
+    Voeg gehakte noten zoals walnoten of amandelen toe aan de vulling voor een knapperige textuur. Rozijnen 
+    kunnen ook een heerlijke zoete twist geven.<br><br>
+ 
+ 
+ </p></div>
+<div id="foto"><img src="https://i.kym-cdn.com/entries/icons/facebook/000/038/071/wapple_hd.jpg" alt="Appel" title="Appel" width="100%"></a>
+ </div>
+<div id="tekstonderT"><p>6. Luchtcirculatie voor een Krokante Bodem:<br>
+  Plaats de appeltaart op een bakplaat om luchtcirculatie mogelijk te maken en de onderkant van de taart 
+  krokant te houden.<br><br>
+
+7. Beheers de Baktemperatuur:<br>
+  Houd de baktemperatuur nauwlettend in de gaten. Begin bij een hogere temperatuur om de korst te laten 
+  bakken, en verlaag vervolgens de temperatuur voor een gelijkmatige garing van de vulling.<br><br>
+
+8. Laat de Taart Rusten:<br>
+    Laat de appeltaart na het bakken even rusten voordat je hem aansnijdt. Hierdoor kan de vulling zich 
+    steviger zetten, waardoor het gemakkelijker wordt om mooie plakjes te snijden zonder dat de vulling uitloopt.</p></div>
 <div id="contact"> <p>contacten</p></div>
 </body>
 </html>
