--- a/paginas/Cybersecurity.Html
+++ b/paginas/Cybersecurity.Html
@@ -7,7 +7,10 @@
   </head>
 <body>
 <p>cybersecurity</p>
-<div id="logo"><p>logo</p></div>
+<div id="logo">
+  <a href="/index.html"><img src="/images/tort.png" height="100px"
+     alt="Appeltaart Inc" title="Appeltaart Inc"> </a>
+  </div>
 <div id="menubalk"><h1></h1>
   <a href="/paginas/Recepten.html">Recepten</a>
   <a href="/paginas/allergieën.html">Allergieën</a>
