--- a/paginas/Tips en tricks.html
+++ b/paginas/Tips en tricks.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" type="text/css" href="/style.css" />
   </head>
 <body>
-<div id="logo"><p>logo</p></div>
+   <div id="logo">
+      <a href="/index.html"><img src="/images/tort.png" height="100px"
+         alt="Appeltaart Inc" title="Appeltaart Inc"> </a>
+      </div>
 <div id="menubalk">
   <a href="/paginas/Recepten.html">Recepten</a>
   <a href="/paginas/allergieën.html">Allergieën</a>
