--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body> 
-  <div id="logo"><p>logo</p></div>
+  <div id="logo">
+  <a href="/index.html"><img src="/images/tort.png" height="100px"
+     alt="Appeltaart Inc" title="Appeltaart Inc"> </a>
+  </div>
   <div id="menubalk"><p>
   <a href="/paginas/Recepten.html">Recepten</a>
   <a href="/paginas/allergieën.html">Allergieën</a>
