--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 
 <head>
@@ -19,11 +18,11 @@
   <a href="/paginas/Tips en tricks.html">Tips en tricks</a>
   <a href="/paginas/Cybersecurity.Html">Cybersecurity</a> </p></div>
 
-  <div id="tekst"> <h1>Appeltaart Inc</h1><p>een hoop tekst</p> </div>
+  <div id="tekst"> <h1>Appeltaart Inc</h1><p>Welkom in de smaakvolle wereld van appeltaarten, waar meesterbakkers Jouke en Ide hun passie voor gebak delen en een verrukkelijke selectie appeltaarten presenteren. Duik in de heerlijke creaties, bereid met vakmanschap en liefde voor het bakkersambacht. Ontdek unieke smaakcombinaties, traditionele favorieten en verrassende twists die je smaakpapillen betoveren. Laat je inspireren door het verhaal achter elke taart en leer meer over de kunst van het appeltaart bakken. Klaar voor een smaakvolle ontdekkingsreis? Neem plaats en geniet van de onweerstaanbare wereld van Jouke en Ide's appeltaarten.
+  </p> </div>
   <div id="foto"><img src="https://www.koopmans.com/Recepten/B/Bakken.nl_Q2_Koopmans_Klein_Appeltaartje_KL.jpg"
     alt="Appeltaart" title="Appeltaart" width="100%" ></div> </div>
-  <div id="tekstonderT"><p>meer tekst</p></div>
-  <div id="contact"> <p>contacten</p></div>
+  <div id="tekstonderT"><p></p></div>
 </body>
 
 </html>
