--- a/paginas/Tips en tricks.html
+++ b/paginas/Tips en tricks.html
@@ -10,11 +10,12 @@
       <a href="/index.html"><img src="/images/tort.png" height="100px"
          alt="Appeltaart Inc" title="Appeltaart Inc"> </a>
       </div>
-<div id="menubalk">
-  <a href="/paginas/Recepten.html">Recepten</a>
-  <a href="/paginas/allergieën.html">Allergieën</a>
-  <a href="/paginas/Tips en tricks.html">Tips en tricks</a>
-  <a href="/paginas/Cybersecurity.Html">Cybersecurity</a></div>
+      <div id="menubalk"><p>
+         <a href="Recepten.html">recepten</a>
+<a href="allergieën.html">alergieën</a>
+<a href="Tips en tricks.html">tips en tricks</a>
+<a href="Cybersecurity.html">Cybersecurity</a>
+         </div>
   <div id="tekst"><h2>Tips en Tricks</h2><p>8 Tips/Tricks voor Perfecte Appeltaart:<br><br>
 
     1. Kies de Juiste Appels:<br>
@@ -52,6 +53,5 @@
 8. Laat de Taart Rusten:<br>
     Laat de appeltaart na het bakken even rusten voordat je hem aansnijdt. Hierdoor kan de vulling zich 
     steviger zetten, waardoor het gemakkelijker wordt om mooie plakjes te snijden zonder dat de vulling uitloopt.</p></div>
-<div id="contact"> <p>contacten</p></div>
 </body>
 </html>
